# cpp_practice

./: .gitignore  CMakeLists.txt  readme.md
cmake/: child_test.cmake  library.cmake  subdir.cmake
shell/: MakeCert.sh
src/: CMakeLists.txt
src/Algorithm/dynamic_programming/cut/: CMakeLists.txt  main.cc
src/Algorithm/sort/: sort.h
src/AppBase/: AppBase.cpp  AppBase.h  CMakeLists.txt  appbase.cc  appbase.h  main.cpp
src/AppBase/task/: InitState.cpp  OptionState.h  Task.h  TaskState.h
src/Boost/: CMakeLists.txt
src/Boost/Asio/TcpClient/: CMakeLists.txt  client.cpp  client.h  io_interface.h  main.cc  main.cpp  ssl_client.cpp  ssl_client.h  tcp_client.cpp  tcp_client.h  test_client.cc  test_client.cpp  test_client.h
src/Boost/Coroutine/: CMakeLists.txt
src/Boost/IO/: main.cc
src/Boost/Log/: CMakeLists.txt
src/Boost/Redis/: CMakeLists.txt
src/Calculate/: calculate.cc  calculate.h
src/DataStruct/queue/: Queue.hpp
src/DemoApp/: CMakeLists.txt  ServerAdapter.h  client.cpp  client.h  client_factory.cc  client_factory.cpp  client_factory.h  client_handler.cc  client_handler.cpp  client_handler.h  client_manager.cc  client_manager.h  demo.cc  demo.cpp  demo.h  main.cc  main.cpp  server_adapter.h
src/DemoApp/ServerA/: ServerAAdapter.cpp  ServerAAdapter.h  server_a_adapter.cc  server_a_adapter.h
src/DemoApp/ServerB/: ServerBAdapter.cpp  ServerBAdapter.h  server_b_adapter.cc  server_b_adapter.h
src/DemoApp/design/: readme.md
src/DemoApp/operate/: operate.h
src/DemoApp/proto/: message.pb.cc  message.pb.h  message.proto
src/DemoApp/task/: InitState.cpp  InitState.h  OptionState.cpp  OptionState.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskMsg.h  TaskPool.cpp  TaskPool.h  TaskState.h  TaskWrapper.hpp  init_state.cc  init_state.h  option_state.cc  option_state.h  task.cc  task.h  task_manager.cc  task_manager.h  task_msg.h  task_pool.cc  task_pool.h  task_state.h
src/DesignPattern/bridge/: Line.cc
src/Dictionary/: Dictionary.cc
src/FileStore/: main.cc  main.cpp
src/Openssl/: CMakeLists.txt
src/SipMessage/: Fields.cpp  Fields.h  fields.cc  header.hpp  main.cc  status.h  type_traits.hpp  verb.h
src/SpellCorrection/: CMakeLists.txt
src/TcpServer/: CMakeLists.txt
src/TcpServer/inc/: Acceptor.h  Thread.h  Threadpool.h  epoll_poller.h
src/TcpServer/src/: Thread.cc  Threadpool.cc  inet_address.cc  tcp_connection.cc  test_server.cc
src/asan/: CMakeLists.txt  main.cc
src/component/eventfd/: eventfd.cc  eventfd.h  eventfd_thread.cc  eventfd_thread.h
src/component/mutex/: condition.cc  condition.h  mutex_lock.cc  mutex_lock.h
src/component/network/: acceptor.cc  acceptor.h  epoll_poller.cc  epoll_poller.h  inet_address.cc  inet_address.h  socket.cc  socket.h  socket_io.cc  socket_io.h  socket_util.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h
src/component/thread/: thread.cc  thread.h
src/component/thread_pool/: task_queue.cc  task_queue.h  threadpool.cc  threadpool.h
src/component/timer/: timer.cc  timer.h  timer_thread.cc  timer_thread.h
src/component/util/: common.h  logger_interface.h  noncopyable.h  util.h
src/eventfd/: Eventfd.cc  Eventfd.h  EventfdThread.h  Noncopyable.h  Thread.cc  Thread.h  eventfd_thread.cc  eventfd_thread.h  testEventfd.cc
src/interface/BinarySearch/: BinarySearch.cpp
src/interface/bitset/: main.cc
src/interface/cast/: Cast.h  cast4_io.cc
src/interface/coroutine/: CMakeLists.txt
src/interface/cxx11/: CMakeLists.txt
src/interface/cxx20/: CMakeLists.txt
src/interface/deque/: dequetest.cpp
src/interface/dynamic/: dynamic.cc
src/interface/forward/: main.cpp
src/interface/lrvalue/: lrvalue.cc  lrvalue.cpp
src/interface/mem_fn/: mem_fn.cpp
src/interface/replace/: main.cpp
src/interface/set/: set_interface.cc
src/interface/set_intersection/: set_intersection.cc
src/interface/smartPtr/: smartPtr.cc
src/interface/static/: main.cc  src.cpp
src/interface/synchronization/: CMakeLists.txt
src/interface/tuple/: main.cc
src/interface/variadic_arguments/: main.cc
src/interface/vector/: main.cpp
src/linux/poll/: poll.cc
src/linux/select/: select.cpp
src/linux/sharemem/: CMakeLists.txt  pshm_ucase.h
src/logadm/: CMakeLists.txt  log_adm.cpp
src/mock/turtle/: Turtle.h  main.cpp
src/module/: main.cpp
src/mysql/connect/: main.cc
src/mysql/prepare/: main.cc
src/networklib/: Acceptor.cc  Acceptor.cpp  Acceptor.h  CMakeLists.txt  Condition.cc  Condition.h  EpollPoller.cc  EpollPoller.h  MutexLock.cc  MutexLock.h  Noncopyable.h  Socket.cc  Socket.h  SocketIO.h  TaskQueue.cpp  TaskQueue.h  TcpServer.cc  TcpServer.h  Thread.cc  Thread.h  Threadpool.cc  Threadpool.cpp  Threadpool.h  epoll_poller.cc  epoll_poller.h  inet_address.cc  inet_address.h  mutex_lock.h  socket_io.cc  socket_io.h  socket_util.h  task_queue.h  tcp_connection.cc  tcp_connection.h  tcp_server.cc  tcp_server.h  test_server.cc  test_server.cpp
src/networklib/reactor/: EpollReactor.cpp  EpollReactor.h  EventHandler.cpp  EventHandler.h  Reactor.cc  Reactor.cpp  Reactor.h  ReactorInterface.h  event_handler.h  reactor_interface.cc  reactor_interface.h
src/objcopy/lib/: Print.cc  Print.h
src/objcopy/main/: main.cc  main.cpp
src/parttern/visit/: readme.md  visit.cpp
src/project/network_demo/: test_server.cc
src/rssSearchEngine/: CMakeLists.txt
src/sizeof/: main.cc
src/stl_base/allocator/: Allocator.h  main.cc
src/template/: main.cc
src/test/: reverse.cpp
src/test/demo/: test.cpp
src/textquery/: and_or_query_test.cc  and_query_test.cc  get_print.cc  query.cc  query.h  text_query.cc  text_query.h  wordQueryTest.cc
src/timer/: Thread.cc  Timer.cc  Timer.h  TimerThread.cc  testTimer.cc  timer_thread.cc
src/util/: CMakeLists.txt  util.h
test/: CMakeLists.txt
test/AppBase/: AppBaseTest.cc  AppBaseTest.cpp
test/Calculate/: test_calculate.cc
test/boost/log/: log_test.cc  log_test.cpp
test/demo/: test.cc  test.cpp
test/eventfd/: test.cc
test/fixture/: test.cc
test/mock/: MockTurtle.cc  MockTurtle.h  test.cpp
uml/reactor/: readme.md
(+204 files in other folders)
